bases/apps/obsidian/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: obsidian
    app.kubernetes.io/name: obsidian
  name: obsidian
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: obsidian
      app.kubernetes.io/name: obsidian
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: obsidian
        app.kubernetes.io/name: obsidian
    spec:
      containers:
      - image: 'ghcr.io/sytone/obsidian-remote:latest'
        imagePullPolicy: IfNotPresent
        name: obsidian
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /vaults/psuite
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: obsidian-config
      - name: data
        persistentVolumeClaim:
          claimName: obsidian-psuite
