bases/apps/obsidian/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: obsidian
    app.kubernetes.io/name: obsidian
    app.kubernetes.io/service: obsidian
  name: obsidian
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: obsidian
    app.kubernetes.io/name: obsidian
  type: ClusterIP
